--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
 
 registrations:
   open: true
-  url: https://doity.com.br/sotm-latam-2024/inscricao
+  url: https://doity.com.br/sotm-latam-2024
 
 program:
   # stage: call-for-proposals-will-open-soon
